added vuejs post component

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10644,3 +10644,11 @@ a.text-dark:focus {
   }
 }
 
+.comments img {
+  vertical-align: unset !important;
+}
+
+.btn.btn-success.btn-md {
+  float: right;
+}
+
